[metadata]
name = BinanceAsyncWebsocket
version = 3.0.2
author = Antas
description = Binance asynchronous websocket SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/monk-after-90s/BinanceAsyncWebsocket
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
[options]
packages = find:
python_requires = >=3.7
install_requires =
    ensureTaskCanceled
    NoLossAsyncGenerator==2.4
    AsyncWebsocketStreamInterface==0.9.12
    aiohttp



